Fixed bottom image positioning on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
   }
 
   .right{
-    height: 51vh;
+    height: 47vh;
     width: 105vw;
     z-index: 0;
   }
